# tetris

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt
src/maia/: CMakeLists.txt
src/maia/gui/: CMakeLists.txt  imgui_extensions.cpp  imgui_extensions.h
src/maia/tetris/: CMakeLists.txt  block.h  grid.cpp  grid.h  main.cpp  shape.h  shape_test.cpp  tetris.h  tetromino.h  tetromino_test.cpp  vector.h  vector_test.cpp
